Tweaked API call for sending new message. Fixed an issue where content would overflow ConvoCell.

--- a/src/components/ConvoCell/ConvoCell.module.css
+++ b/src/components/ConvoCell/ConvoCell.module.css
@@ -7,6 +7,7 @@
     text-decoration: none;
     padding: 0.5rem 1rem;
     border-bottom: 1px solid #eeeeee;
+    overflow: hidden;
 }
 
 .imageContainer {
